fix width of contact form to prevent it overlapping right sidebar content

--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -621,6 +621,7 @@ a.source-btn:hover {
 #contact_form {
   position: relative;
   left: -80px;
+  width: 745px;
 }
 
 /***************************
